--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-yolo
+---
+layout: default
+title: Stehen Ciauri, Xcoder 
+---
+<div class="blurb">
+	<h1>k</h1>
+	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
