--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 ---
 layout: default
 title: Stehen Ciauri, Xcoder 
+pagination:
+ enabled: true
 ---
 <div class="blurb">
-	<h1>k</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Stephen Ciauri</h1>
+	<p>The unedited ramblings of a madman.</p>
 </div><!-- /.blurb -->
+{% for post in paginator.posts %}
+  <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+  <p class="meta">{{ post.date | date_to_string }}</p>
+  <div class="content">
+    {{ post.content }}
+  </div>
+{% endfor %}
